--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ db.sqlite3
 ###############################
 # ARCHIVOS DE REQUISITOS
 ###############################
-requirements.txt
+#requirements.txt
 Pipfile
 Pipfile.lock
 poetry.lock
